@@ -30,6 +30,7 @@ dependencies:
   carousel_slider: ^2.0.0
   flutter_webview_plugin: ^0.3.11
   firebase_crashlytics: ^0.1.3+3
+  cached_network_image: ^2.2.0
 
 dev_dependencies:
   flutter_test:
